# CS323_Compilers_2020F

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  enviorment.sh  judge.sh  markdown.css
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: judge.yml
Assignment01/: Assignment01.md  README.md  bonus1_step1.tex  bonus1_step2.tex  bonus1_step3.tex  bonus1_step4.tex  bonus1_step5.tex  bonus1_step6.tex
Assignment02/: Assignment02.md  Question1_01_DFA_01.tex  Question1_01_NFA_01.tex  Question1_01_NFA_02.tex  Question1_01_NFA_03.tex  Question1_01_NFA_04.tex  Question1_01_NFA_05.tex  Question1_01_NFA_06.tex  Question1_02_DFA_01.tex  Question1_02_NFA_02.tex  Question1_02_NFA_03.tex  Question1_02_NFA_04.tex  Question1_02_NFA_05.tex  Question1_03_DFA_01.tex  Question1_03_NFA_05.tex  Question1_03_NFA_06.tex  Question1_03_NFA_07.tex  Question1_03_NFA_08.tex  Question1_03_NFA_09.tex  Question1_03_NFA_10.tex  Question1_03_NFA_11.tex  Question1_03_NFA_12.tex  Question1_03_NFA_13.tex  Question1_03_NFA_14.tex  Question1_04_DFA_01.tex  Question1_04_DFA_01_simple.tex  Question1_04_NFA_01.tex  Question1_04_NFA_02.tex  Question1_04_NFA_03.tex  Question1_04_NFA_04.tex  Question1_04_NFA_05.tex  Question1_04_NFA_06.tex  Question1_04_NFA_07.tex  Question1_04_NFA_08.tex  Question1_04_NFA_09.tex  Question1_04_NFA_10.tex  Question1_04_NFA_11.tex  Question1_04_NFA_12.tex  README.md
Assignment03/: Assignment03.html  Assignment03.md  Question1_04_01.dot  Question_Bonus1.dot  Question_Bonus2.dot  README.md
Assignment04/: Assignment04.md  Question1_01.dot  README.md
Assignment05/: Assignment05.md  CMakeLists.txt  Question1_01.dot  Question1_01.html  Question1_02.dot  Question1_02.html  Question1_03.dot  Question1_03.html  Question2.cpp  Question2.in  Question2_01.dot  README.md
cmake/: preBuild.cmake
lab01/: CMakeLists.txt  Makefile  README.md  hello_world.c  judge.sh  linked_list.c  linked_list.h  ll_test.py  main.c
lab02/: CMakeLists.txt  README.md
lab02/ipaddr/: CMakeLists.txt  README.md  ip_test.py  judge.sh  lex.l
lab02/wc/: CMakeLists.txt  README.md  judge.sh  lex.l
lab03/: CMakeLists.txt  README.md
lab03/calc/: .gitignore  CMakeLists.txt  Makefile  README.md  calc_test.py  judge.sh  lex.l
lab03/parentheses/: .gitignore  CMakeLists.txt  Makefile  README.md  judge.sh  lex.l  paren_test.py  syntax.y
lab04/: .gitignore  CMakeLists.txt  Makefile  jsonparser_test.py  judge.sh  lex.l  syntax.y
lab04/data/: fail02.json  fail03.json  fail04.json  fail05.json  fail06.json  fail07.json  fail08.json  fail09.json  fail10.json  fail11.json  fail12.json  fail13.json  fail14.json  fail15.json  fail16.json  fail17.json  fail19.json  fail20.json  fail21.json  fail22.json  fail23.json  fail24.json  fail25.json  fail26.json  fail27.json  fail28.json  fail29.json  fail30.json  fail31.json  fail32.json  fail33.json  pass01.json
lab05/: CMakeLists.txt  Makefile  judge.sh  symtab.h  symtab_bt.c  symtab_ht.c  symtab_ll.c  test.py
lab06/: Json_Definition.cpp  readme.md
lab07/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Object.cpp  Object.hpp  README.md  judge.sh  main.cpp  syntax.y
lab08/: CMakeLists.txt  Makefile  Object.cpp  Object.hpp  jsonchecker_test.py  judge.sh  lex.l  main.cpp  syntax.y
lab12/: heap_exp.py
project1/: .gitignore  CMakeLists.txt  Makefile  README.md  enviorment.sh  judge.sh  lex.l  main.c  node.c  node.h  syntax.y  yyerror_myself.c  yyerror_myself.h
project1/report/: SID-project1.md
project1/src/: CMakeLists.txt  Makefile  lex.l  main.c  main.cpp  node.cpp  node.hpp  syntax.y  yyerror_myself.cpp  yyerror_myself.hpp
project1/test/: .gitignore  test_1_r03.test.out  test_1_r04.test.out  test_1_r08.test.out  test_1_r10.test.out  test_1_r12.test.out  test_SID_1.out  test_SID_1.spl  test_SID_2.spl  test_SID_2.test.out  test_SID_3.out  test_SID_3.spl  test_SID_4.spl  test_SID_4.test.out  test_SID_5.spl  test_SID_5.test.out  testcase1  testcase1.in
project1/test_example/: .gitignore  test_1_r04.test.out  test_1_r09.test.out  testcase1.test.out
project2/: README.md  judge.sh
project2/src/: CMakeLists.txt  Makefile  lex.l  main.cpp  node.cpp  node.hpp  semanticError.cpp  semanticError.hpp  splc  symbolTable.cpp  symbolTable.hpp  syntax.y  type.cpp  type.hpp  visitSyntaxTree.cpp  visitSyntaxTree.hpp  visitSyntaxTree2.cpp  visitSyntaxTree2.hpp  yyerror_myself.cpp  yyerror_myself.hpp
project3/: .gitignore  CMakeLists.txt  Makefile  README.md  judge.sh
project3/include/: interCode.hpp  node.hpp  semanticError.hpp  translate.hpp  translate2.hpp  type.hpp  visitSyntaxTree.hpp  visitSyntaxTree2.hpp  yyerror_myself.hpp
project3/report/: StudentID-project3.md
project3/sample/: test05.ir.test  test05.spl
project3/simulator/: .gitignore  test_shell_for_test_3_r02.sh
project3/src/: CMakeLists.txt  Makefile  interCode.cpp  interCode.hpp  lex.l  node.cpp  node.hpp  semanticError.hpp  syntax.y  translate.cpp  translate.hpp  translate2.hpp  type.cpp  type.hpp  visitSyntaxTree.cpp  visitSyntaxTree.hpp  yyerror_myself.hpp
project3/test/: read_and_write.hpp  test_3_r01.cpp  test_3_r01.ir  test_3_r01.ir.test  test_3_r01.spl  test_3_r02.cpp  test_3_r02.ir.test  test_3_r03.cpp  test_3_r03.ir.test  test_3_r04.cpp  test_3_r04.ir  test_3_r04.ir.test  test_3_r05.cpp  test_3_r05.ir.test  test_3_r06.cpp  test_3_r06.ir.test  test_3_r07.cpp  test_3_r07.ir.test  test_3_r08.cpp  test_3_r08.ir.test  test_3_r09.cpp  test_3_r09.ir.test  test_3_r10.cpp  test_3_r10.ir.test
project4/: CMakeLists.txt  Makefile  README.md  judge.sh  mips32.cpp  mips32.hpp  tac.cpp
project4/origin/: CMakeLists.txt  Makefile  main.cpp  mips32.cpp  mips32.hpp  tac.cpp  tac.hpp
project4/test/: CMakeLists.txt  README.md  read_and_write.hpp  test_4_r01.asm  test_4_r01.asm.test  test_4_r01.cpp  test_4_r01.ir.test  test_4_r01.test.asm  test_4_r02.asm  test_4_r02.asm.test  test_4_r02.cpp  test_4_r02.test.asm  test_4_r02.test.ir  test_4_r03.asm  test_4_r03.asm.test  test_4_r03.cpp  test_4_r03.test.asm  test_4_r03.test.ir  test_r01.out
(+68 files in other folders)
