# header begin
cmake_minimum_required(VERSION 3.16.6)
project(CS323_Compilers_project1 LANGUAGES C)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lfl -ly -fPIC")

FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)

FLEX_TARGET(lexer
        ${CMAKE_CURRENT_SOURCE_DIR}/lex.l
        ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c)
BISON_TARGET(parser
        ${CMAKE_CURRENT_SOURCE_DIR}/syntax.y
        ${CMAKE_CURRENT_BINARY_DIR}/syntax.tab.c
        COMPILE_FLAGS "-t -d -v")

ADD_FLEX_BISON_DEPENDENCY(lexer parser)

SET(GEN_SOURCES
        ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c
        ${CMAKE_CURRENT_BINARY_DIR}/syntax.tab.c
        ${CMAKE_CURRENT_BINARY_DIR}/syntax.tab.h
        )
SET_SOURCE_FILES_PROPERTIES(${GEN_SOURCES} GENERATED)

ADD_LIBRARY(${PROJECT_NAME}_lexer
        SHARED
        ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c
        )
#ADD_EXECUTABLE(Flex.out ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c)
# ADD_LIBRARY(${PROJECT_NAME}_pro1
#         SHARED
#         ${CMAKE_CURRENT_BINARY_DIR}/syntax.tab.c)
ADD_EXECUTABLE(${PROJECT_NAME}_pro1 
     ${CMAKE_CURRENT_BINARY_DIR}/syntax.tab.c)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_pro1 ${PROJECT_NAME}_lexer)